# TransHub

./: .gitignore  .gitmodules  Build  CODEOWNERS  CONTRIBUTING  EDYTPU.json  Gui  Gui.sh  README.md  Service  Service.sh  TransHub.pro  buildScript.sh  file.gitignore  guzJSq.json  runTest  transhub.yaml
.github/workflows/: ci.yaml
Common/: Common.pro  README.md
Common/Application/: Application.cpp  Application.h  IApplication.h  application.pri
Common/ColorConsole/: ColorConsoleAppender.cpp  ColorConsoleAppender.h
Common/ComponentsCore5alpha/: .gitignore  CMakeLists.txt  Changelist.txt  ComponentManager  ComponentsCore5alpha.pro  IComponent  README.md  Windows_build.md  componentmanager.cpp  componentmanager.h  componentmanager_p.h  components-core5-alpha.spec  componentscore_global.h  componentspec.cpp  componentspec.h  componentspec_p.h  create_release.sh  icomponent.cpp  icomponent.h  icomponent_p.cpp  icomponent_p.h  invoker.cpp  invoker.h  version.h
Common/ComponentsCore5alpha/debian/: changelog  components-core-5-dev.install  control  copyright  rules
Common/TCP/: TCP.pro
GuiApplication/: Application.h  GuiApplication.pro  GuiVersion.h  LoadDialog.cpp  RunErrorDialog.h  SplashScreen.cpp  UnloadDialog.cpp  main.cpp  main.qml  osm.html  qml.qrc  transhubwingow.cpp  transhubwingow.h
ServiceApplication/: ServiceApplication.pro
buildGuiApplication/: GuiApplication  Makefile  moc_bottombar.cpp  moc_rightscreen.cpp  moc_transhubwingow.cpp  qmake_qmake_qm_files.qrc  qrc_qmake_qmake_qm_files.cpp  qrc_qml.cpp
include/: settings.h  settings.pri
(+329 files in other folders)
